--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
                         <img src="img/avatar.png" alt="avatar">
                         <div class="personal-info__data">
                             <p class="personal-info__data--enter">Личный кабинет</p>
-                            <p class="personal-info__data--enter">Вход | <span><a href="#">Регистрация</a></span></p>
+                            <p class="personal-info__data--enter"><a href="#">Вход</a> | <span><a href="#">Регистрация</a></span></p>
                         </div>
                     </div>
                     <div class="personal-info">
@@ -444,7 +444,6 @@
                 <img class="footer__logo--img" src="img/logo_2.png" alt="logo">
                 <p class="footer__logo--text">Оптовый магазин товаров для дома<br>
                     “Господар” (с) 2019 Все права защищены</p>
-                <p class="footer__logo--text">Сайт разработан компанией <a href="#">LS MARKETING</a></p>
             </div>
             <div class="footer__contact">
                 <ul>
@@ -458,7 +457,7 @@
                 <p class="footer__contact--adress">г.Мелитополь, ул. Интеркультурная, 38</p>
                 <div class="footer__contact--map">
                     <img src="img/maps-and-flags.png" alt="location">
-                    <a href="#">Посмотреть на карте</a>
+                    <a href="https://www.google.com.ua/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%86%D0%BD%D1%82%D0%B5%D1%80%D0%BA%D1%83%D0%BB%D1%8C%D1%82%D1%83%D1%80%D0%BD%D0%B0,+83,+%D0%9C%D0%B5%D0%BB%D1%96%D1%82%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C,+%D0%97%D0%B0%D0%BF%D0%BE%D1%80%D1%96%D0%B7%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+72300/@46.8462527,35.37634,18z/data=!4m13!1m7!3m6!1s0x40c2ae1b705edcdb:0x4a958bbe38446494!2z0LLRg9C70LjRhtGPINCG0L3RgtC10YDQutGD0LvRjNGC0YPRgNC90LAsIDgzLCDQnNC10LvRltGC0L7Qv9C-0LvRjCwg0JfQsNC_0L7RgNGW0LfRjNC60LAg0L7QsdC70LDRgdGC0YwsIDcyMzAw!3b1!8m2!3d46.8462514!4d35.3771138!3m4!1s0x40c2ae1b705edcdb:0x4a958bbe38446494!8m2!3d46.8462514!4d35.3771138?hl=ru&authuser=1">Посмотреть на карте</a>
                 </div>
             </div>
         </div>
